# bibdb

./: LICENSE  README.md  bibdb.cabal
src/: Args.hs  Bibliography.hs  Enrich.hs  Main.hs  Reference.hs
src/Database/: ArXiv.hs  Dblp.hs  Doi.hs  Fetch.hs  Hal.hs
src/Parser/: AlexUserState.hs  Lexer.x  Location.hs  Parser.y  Token.hs
src/Utility/: Except.hs
tests/: comments.bibdb  copies.bibdb  doi.bibdb  duplicates.bibdb  sources.bibdb
