name:                bibdb
version:             1.0.0
category:            Text
synopsis:            A database based bibliography manager for BibTeX
homepage:            https://github.com/cacay/bibdb

license:             MIT
license-file:        LICENSE

author:              Josh Acay
maintainer:          coskuacay@gmail.con

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md


executable bibdb

  default-language:     Haskell2010

  hs-source-dirs:       src

  main-is:              Main.hs

  build-depends:        base >= 4.6,
                        transformers >= 0.2,
                        mtl >= 2.2.1 && < 2.3,
                        containers >= 0.5,
                        bytestring == 0.10.6.*,
                        optparse-applicative == 0.12.0.*,
                        pretty == 1.1.3.*

  default-extensions:   PatternGuards,
                        ScopedTypeVariables,
                        MultiParamTypeClasses

  other-extensions:     FlexibleInstances
                        GeneralizedNewtypeDeriving

  ghc-options:          -fwarn-incomplete-patterns

